Closed Bug 1196558 Opened 10 years ago Closed 10 years ago

Intermittent test_fastSeek.html | application crashed [@ mozilla::TaskQueue::Dispatch(already_AddRefed<nsIRunnable>, mozilla::AbstractThread::DispatchFailureHandling, mozilla::AbstractThread::DispatchReason)]

Categories

(Core :: Audio/Video, defect)

43 Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla43
Tracking Status
firefox41 --- unaffected
firefox42 --- unaffected
firefox43 --- fixed
firefox-esr38 --- unaffected

People

(Reporter: KWierso, Assigned: jya)

References

Details

(Keywords: intermittent-failure)

Attachments

(1 file)

See Also: → 1197083
We are in a racy situation where the task queue could start flushing after we've tested if it was being flushed. We do not care if the task isn't going to be dispatched as we want the frame to be dropped when that happens anyway.
Attachment #8652145 - Flags: review?(edwin)
Assignee: nobody → jyavenard
Blocks: 1197083
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla43
Backed out for a youtube playback regression. See Bug 1199573. https://hg.mozilla.org/releases/mozilla-aurora/rev/5bb661db5c6c
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Status: REOPENED → RESOLVED
Closed: 10 years ago10 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: