Bug 1196558: Don't assert should output task not be dispatched. r=edwin a=ritu

We are in a racy situation where the task queue could start flushing after we've tested if it was being flushed. We do not care if the task isn't going to be dispatched as we want the frame to be dropped when that happens anyway.

--HG--
extra : rebase_source : f36a7189db026ad0b595cee4b8b151a153117847
extra : histedit_source : 7c32c510dfb775c135212224d96ba2e70d89c615